fix(slider): fix the z-index of slider button too large (#623)

--- a/packages/theme-chalk/src/slider.scss
+++ b/packages/theme-chalk/src/slider.scss
@@ -94,7 +94,7 @@
     height: $--slider-button-wrapper-size;
     width: $--slider-button-wrapper-size;
     position: absolute;
-    z-index: 1001;
+    z-index: 1;
     top: $--slider-button-wrapper-offset;
     transform: translateX(-50%);
     background-color: transparent;
